feat: added unbound to resolve DoT

--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -696,8 +696,8 @@ user=dnsmasq
 group=dnsmasq
 
 # Use Cloudflare as upstream DNS
-server=1.0.0.1
-server=1.1.1.1
+#server=1.0.0.1
+#server=1.1.1.1
 
 # Listen on all interfaces
 interface=*
